--- a/Web/Pages/Blog.cshtml
+++ b/Web/Pages/Blog.cshtml
@@ -15,7 +15,7 @@ ViewData["Title"] = "Blog page";
 		<div class="container">
 			<div class="blog_b_text text-center">
 				<h2>Dotnetkari Blog</h2>
-				<p>DOT NET developer blog</p>
+				<p>DOT NET developer blog(s)</p>
 				<a class="white_bg_btn" href="https://dotnetkari.blogspot.com/">View More</a>
 			</div>
 		</div>
