--- a/Web/Pages/_About.cshtml
+++ b/Web/Pages/_About.cshtml
@@ -1,4 +1,4 @@
-﻿@model API.Model.Profile
+﻿@model API.Model.Profile.ProfileInfo
 
 <!--================Home Banner Area =================-->
 <section class="home_banner_area">
