--- a/Web/Pages/Blog.cshtml
+++ b/Web/Pages/Blog.cshtml
@@ -172,7 +172,7 @@ ViewData["Title"] = "Blog page";
                         <div class="social_icon">
                             <a href="https://www.facebook.com/amit.dole.7"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.linkedin.com/in/amit-dole-41a3b420/"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
+                            <a href="https://github.com/amitdole"><i class="fa fa-github"></i></a>
                         </div>
                         <p>Blogging on everything .NET.</p>
                         <div class="br"></div>
