--- a/Web/Pages/_About.cshtml
+++ b/Web/Pages/_About.cshtml
@@ -180,6 +180,37 @@
 <section class="feature_area p_120">
     <div class="container">
         <div class="main_title">
+        	<h2>My Work</h2>
+        </div>
+        <div class="feature_inner row">
+            <div class="col-lg-4 col-md-6">
+        	    <div class="feature_item">
+        		    <i class="flaticon-city"></i>
+        		    <h4><a href="https://github.com/amitdole/amitdole">AmitDole</a></h4>
+        		    <p>Repository for this website, built on .NET core, bootstrap, web api, cosmos DB & hosted on Azure</p>
+        	    </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+        	    <div class="feature_item">
+        		    <i class="flaticon-city"></i>
+        		    <h4><a href="https://github.com/amitdole/amitdole">AmitDole</a></h4>
+        		    <p>Repository for this website, built on .NET core, bootstrap, web api, cosmos DB & hosted on Azure</p>
+        	    </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+        	    <div class="feature_item">
+        		    <i class="flaticon-city"></i>
+        		    <h4><a href="https://github.com/amitdole/microsoftazurecertification">Microsoft Azure Certification</a></h4>
+        		    <p>Repository for Microsoft Azure Certification resources & projects</p>
+        	    </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="feature_area p_120">
+    <div class="container">
+        <div class="main_title">
         	<h2>Work Process</h2>
         </div>
         <div class="feature_inner row">
