changes for valut

--- a/Web/Pages/_About.cshtml
+++ b/Web/Pages/_About.cshtml
@@ -186,15 +186,15 @@
             <div class="col-lg-4 col-md-6">
         	    <div class="feature_item">
         		    <i class="flaticon-city"></i>
-        		    <h4><a href="https://github.com/amitdole/amitdole">AmitDole</a></h4>
-        		    <p>Repository for this website, built on .NET core, bootstrap, web api, cosmos DB & hosted on Azure</p>
+        		    <h4><a href="https://github.com/amitdole/nakshatra">amitdole.com</a></h4>
+        		    <p>Repository for this website, built on .NET core, bootstrap, web api, Cosmos DB & hosted on Azure cloud</p>
         	    </div>
             </div>
             <div class="col-lg-4 col-md-6">
         	    <div class="feature_item">
         		    <i class="flaticon-city"></i>
-        		    <h4><a href="https://github.com/amitdole/amitdole">AmitDole</a></h4>
-        		    <p>Repository for this website, built on .NET core, bootstrap, web api, cosmos DB & hosted on Azure</p>
+        		    <h4><a href="https://github.com/amitdole/nakshatra/tree/master/WebApi">amitdole web api</a></h4>
+        		    <p>Repository for my custom web apis built on .NET core, web api, Cosmos DB & hosted on Azure cloud</p>
         	    </div>
             </div>
             <div class="col-lg-4 col-md-6">
