--- a/Web/Pages/Shared/_Layout.cshtml
+++ b/Web/Pages/Shared/_Layout.cshtml
@@ -55,6 +55,13 @@
 									</ul>
 								</li> 
 								<li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
+                                <li class="nav-item submenu dropdown">
+									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools</a>
+									<ul class="dropdown-menu">
+										<li class="nav-item"><a class="nav-link" href="reminders">Reminders</a></li>
+									</ul>
+								</li> 
+                                <partial name="_LoginPartial.cshtml" />
 							</ul>
 						</div> 
 					</div>
