--- a/PersonalWebsite/Web/Pages/Contact.cshtml
+++ b/PersonalWebsite/Web/Pages/Contact.cshtml
@@ -21,7 +21,7 @@
 </section>
 <!--================End Home Banner Area =================-->
 <!--================Contact Area =================-->
-<section class="contact_area p_120">
+<section class="contact_area p_120" id="message">
     <div class="container">
         @if (Request.Method == "POST")
         {
